--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "@tailwindcss/forms": "^0.5.7",
     "axios": "^1.9.0",
     "chart.js": "^4.4.9",
+    "concurrently": "^9.2.1",
+    "express": "^5.1.0",
+    "file-saver": "^2.0.5",
     "framer-motion": "^10.18.0",
+    "http-proxy-middleware": "^3.0.5",
     "multer": "^1.4.5-lts.2",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
@@ -23,7 +27,8 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-router-dom": "^7.5.1",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
